<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>robin_tarabay_boudo_slimani</groupId>
  <artifactId>notes</artifactId>
  <version>1.0-SNAPSHOT</version>
  <packaging>jar</packaging>

  <name>notes</name>
  <url>http://maven.apache.org</url>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>1.8</maven.compiler.source>
    <maven.compiler.target>1.8</maven.compiler.target>
    <main-class>robin_tarabay_boudo_slimani.notes.App</main-class>
  </properties>
  
  <build>
    <plugins>
     <plugin>
	<groupId>org.apache.maven.plugins</groupId>
	<artifactId>maven-jar-plugin</artifactId>
	<version>2.4</version>
	<configuration>
	  <archive>
	    <manifest>
		<addClasspath>true</addClasspath>
		<mainClass>robin_tarabay_boudo_slimani.notes.App</mainClass>
		<classpathPrefix>dependency-jars/</classpathPrefix>
	    </manifest>
	  </archive>
	</configuration>
  </plugin>
  <plugin>
	<groupId>org.apache.maven.plugins</groupId>
	<artifactId>maven-dependency-plugin</artifactId>
	<version>2.5.1</version>
	<executions>
	  <execution>
		<id>copy-dependencies</id>
		<phase>package</phase>
		<goals>
		    <goal>copy-dependencies</goal>
		</goals>
		<configuration>
		    <outputDirectory>
                          ${project.build.directory}/dependency-jars/
                    </outputDirectory>
		</configuration>
	    </execution>
	</executions>
  </plugin>

      <!-- 	<plugin>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.0.0-M1</version>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <phase>package</phase>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin> -->
  </plugins>
  </build>
  
  <dependencies>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.12</version>
      <scope>test</scope>
    </dependency>
    
	<dependency>
	    <groupId>org.asciidoctor</groupId>
	    <artifactId>asciidoctorj</artifactId>
	    <version>2.0.0-RC.1</version>
	</dependency>
	<dependency>
	    <groupId>org.asciidoctor</groupId>
	    <artifactId>asciidoctorj-pdf</artifactId>
	    <version>1.5.0-alpha.16</version>
	</dependency>
	
  </dependencies>
</project>
